--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
+    "countrycitystatejson": "^25.5.2908",
+    "firebase": "^12.0.0",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-select": "^5.10.1"
+    "react-router-dom": "^7.7.0",
+    "react-select": "^5.10.1",
+    "world-countries-capitals": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
